plugins/coding/src/syntax/snapshots/nyne_coding__syntax__tests__typescript_decompose_function_and_interface.snap
---
source: plugins/coding/src/syntax/tests.rs
expression: "decompose(\"ts\", source)"
---
[
    Fragment {
        name: "greet",
        kind: Symbol(
            Function,
        ),
        byte_range: 0..81,
        signature: Some(
            "export function greet(name: string): void",
        ),
        metadata: Code {
            visibility: Some(
                "export",
            ),
        },
        name_byte_offset: 16,
        children: [],
        parent_name: None,
        fs_name: None,
    },
    Fragment {
        name: "Config",
        kind: Symbol(
            Interface,
        ),
        byte_range: 83..139,
        signature: Some(
            "interface Config",
        ),
        metadata: Code {
            visibility: None,
        },
        name_byte_offset: 93,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
