plugins/coding/src/syntax/snapshots/nyne_coding__syntax__tests__typescript_enum_declaration.snap
---
source: plugins/coding/src/syntax/tests.rs
expression: "decompose(\"ts\", \"export enum Color {\\n    Red,\\n    Green,\\n    Blue,\\n}\\n\")"
---
[
    Fragment {
        name: "Color",
        kind: Symbol(
            Enum,
        ),
        byte_range: 0..51,
        signature: Some(
            "export enum Color",
        ),
        metadata: Code {
            visibility: Some(
                "export",
            ),
        },
        name_byte_offset: 12,
        children: [],
        parent_name: None,
        fs_name: None,
    },
]
